Fri May  7 06:45:28 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: search directories on PATH, only if containing
	  tclsh or wish command (probably right fix for [ruby-core:30010]).

Thu May  6 12:12:26 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README: update.

Wed May  5 19:00:01 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: revert. enbugged by last commit.
	  ([ruby-dev:41133], [ruby-dev:41134], [ruby-core:30010])

	* ext/tk/README.tcltklib: ditto.

Tue May  4 10:07:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (UNALIGNED): get rid of conflict.

Mon May  3 08:15:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/emitter.c (syck_scan_scalar): set SCAN_WHITEEDGE flag
	  when scalar begins with newline.  patches from Dave B <daz AT
	  d10.karoo.co.uk> at [ruby-core:23019] and caleb clausen at
	  [ruby-core:25851].  [ruby-core:23006][ruby-core:29925]

Sun May  2 13:39:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi.rb (CGI::NEEDS_BINMODE): check if O_BINARY is defined.
	  [ruby-core:29922]

	* lib/cgi.rb (CGI::NEEDS_BINMODE): check if O_BINARY value instead
	  of fragile check by platform name.

Sun May  2 07:38:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (dir_config): should not modify argument arrays
	  themselves.

Fri Apr 30 15:38:45 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: better support for MinGW environment.

Thu Apr 29 18:39:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/thwait.rb (ThreadsWait#join): refined rdoc again.
	  [ruby-core:29863] [ruby-dev:41092]

	* lib/thwait.rb (ThreadsWait#join): refined rdoc.  [ruby-core:29863]

Tue Apr 27 18:00:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP#rcptto_list): fixed typo.
	  [ruby-core:29809]

Tue Apr 27 15:21:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_description, ruby_copyright): unaligned and